# Cell-counting

./: .gitignore  KorREADME.md  README.md  hepatocytometer.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
cell_counting/: __init__.py  inference.py  model.py
data/: README.dataset.txt  README.roboflow.txt
data/train/: _annotations.csv
data/valid/: _annotations.csv
docs/assets/: retinanet_architecture.tex
docs/plot_neural_net/: tikzeng.py
docs/scripts/: generate_examples.py  render_model_diagram.py
results/: logs.txt  report_test.csv  report_val.csv
tests/: test_api.py
